Hide AjaxShowEditors' box on ?action=edit for no-JS users, since the feature requires JS to work properly
Change-Id: I69c7fefd148e1d1ab69c8b528892dedfb73b7acf

--- a/resources/styles/ext.AjaxShowEditors.css
+++ b/resources/styles/ext.AjaxShowEditors.css
@@ -6,6 +6,10 @@
 	background-color: #f0f0f0;
 }
 
+.client-nojs #ajax-se {
+	display: none;
+}
+
 #ajax-se-title {
 	font-size: small;
 	display: inline;
